Hoàn thành mục chọn loại nhắc nhở

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#1980E0</color>
+    <color name="text_dark">#333333</color>
 </resources>
