--- a/app/src/main/res/layout/activity_add_reminder.xml
+++ b/app/src/main/res/layout/activity_add_reminder.xml
@@ -3,95 +3,94 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:stretchColumns="1"
-
     tools:context=".AddReminder">
-    />
-    <TableRow
-        android:paddingBottom="10dp"
 
-        android:background="@drawable/bottom_line"
-        >
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:paddingHorizontal="12dp"
+        android:background="@drawable/bottom_line">
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="76dp"
-
-            android:layout_height="match_parent"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginRight="12dp"
             app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
 
         <EditText
-            android:id="@+id/etNhacNho"
+            android:id="@+id/etRemind"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
             android:ems="10"
+            android:textSize="18sp"
             android:inputType="textPersonName"
             android:text=""
+            android:textColor="@color/text_dark"
             android:hint=" Nhắc nhở về"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     </TableRow>
     <TableRow
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:background="@drawable/bottom_line"
-        >
-
-        <ImageView
-            android:id="@+id/ivIcon1"
-            android:layout_width="76dp"
-
-            android:layout_height="match_parent"
-            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/bottom_line">
 
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="60dp"
+            android:layout_span="2"
+            android:dropDownWidth="wrap_content"
+            android:spinnerMode="dropdown"
+            android:paddingEnd="0dp"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     </TableRow>
     <TableRow
         android:id="@+id/rowTime"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:background="@drawable/bottom_line"
-        
-        >
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="12dp"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/bottom_line">
 
         <ImageView
             android:id="@+id/ivIcon2"
-            android:layout_width="76dp"
-
-            android:layout_height="match_parent"
-            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginRight="12dp"
+            app:srcCompat="@android:drawable/ic_lock_idle_alarm"/>
 
         <TextView
             android:id="@+id/tvTime"
             android:layout_width="match_parent"
-            android:text=""
+            android:layout_height="60dp"
             android:gravity="center_vertical"
             android:paddingLeft="10sp"
-            android:textSize="20sp"
-            android:layout_height="45dp"
-
-            />
+            android:text=""
+            android:textColor="@color/text_dark"
+            android:textSize="18sp" />
 
     </TableRow>
     <TableRow
         android:id="@+id/rowDate"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:background="@drawable/bottom_line"
-
-        >
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="12dp"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/bottom_line">
 
         <ImageView
             android:id="@+id/ivIcon3"
-            android:layout_width="76dp"
-            android:layout_height="match_parent"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginRight="12dp"
             app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
 
         <TextView
@@ -100,12 +99,9 @@
             android:text=""
             android:gravity="center_vertical"
             android:paddingLeft="10sp"
-            android:textSize="20sp"
-            android:layout_height="45dp"
-
-            />
+            android:textSize="18sp"
+            android:textColor="@color/text_dark"
+            android:layout_height="60dp" />
 
     </TableRow>
-
-
 </TableLayout>
