--- a/app/src/main/res/layout/spinner_value.xml
+++ b/app/src/main/res/layout/spinner_value.xml
@@ -1,11 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TextView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:textSize="20sp"
-    android:singleLine="true"
-    android:ellipsize="end"
-    android:maxLines="1"
-    android:fontFamily="sans-serif-medium" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingHorizontal="12dp"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/ivSpinner"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginRight="22dp"/>
+
+    <TextView
+        android:id="@+id/tvSpinner"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="60dp"
+        android:gravity="center_vertical"
+        android:textSize="18sp"
+        android:text="Test"
+        android:textColor="@color/text_dark"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:textStyle="normal"
+        />
+</LinearLayout>
