Add Category class and CategoryAdapter,View Category

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,16 @@
         app:layout_constraintTop_toTopOf="parent"
         android:onClick="openActivity"/>
 
+    <Button
+        android:id="@+id/buttonOpen1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Open Category"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonOpen"
+        android:onClick="openActivity1"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
