--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout_linear"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Category">
+    tools:context=".Activity.CategoryActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
