--- a/app/src/main/res/layout/activity_add_reminder.xml
+++ b/app/src/main/res/layout/activity_add_reminder.xml
@@ -130,6 +130,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="10sp"
             android:text=""
+            android:background="?android:attr/selectableItemBackground"
             android:textColor="@color/text_dark"
             android:textSize="18sp" />
 
@@ -156,6 +157,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="10sp"
             android:textSize="18sp"
+            android:background="?android:attr/selectableItemBackground"
             android:textColor="@color/text_dark"
             android:layout_height="60dp" />
 
@@ -180,6 +182,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="10sp"
             android:textSize="18sp"
+            android:background="?android:attr/selectableItemBackground"
             android:textColor="@color/text_dark"
             android:layout_height="60dp" />
 
@@ -204,6 +207,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="10sp"
             android:textSize="18sp"
+            android:background="?android:attr/selectableItemBackground"
             android:textColor="@color/text_dark"
             android:layout_height="60dp" />
 
