--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/layout_linear"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".Fragment.CategoryFragment">
+
+
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/rvCategory"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#3AC32F"
-    tools:context=".Fragment.CategoryFragment">
+    android:layout_height="match_parent" />
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Category Fragment"
-        android:gravity="center"
-        android:textSize="30sp"/>
 
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
