--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -9,12 +9,14 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/scheduleTabLayout"
-            app:tabMode="auto"
-            app:tabGravity="fill"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:tabGravity="fill"
+            app:tabMode="auto"
+            tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.appbar.AppBarLayout>
 
 
@@ -22,6 +24,7 @@
         android:id="@+id/scheduleViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/appbar"/>
+        android:layout_below="@+id/appbar"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </RelativeLayout>
