--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,17 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/layout_linear"
+    android:id="@+id/drawerLayout"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".Fragment.CategoryFragment">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbarlayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/CategoryToolbar"
+            android:minHeight="55dp"
+            android:background="@color/white"
+            android:theme="?attr/actionBarTheme"
+            >
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/TablayoutCategory"
+                app:tabSelectedTextColor="@android:color/holo_orange_light"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:tabGravity="fill"
+                app:tabMode="auto">
+
+            </com.google.android.material.tabs.TabLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
 
 <androidx.recyclerview.widget.RecyclerView
+    android:layout_below="@+id/appbarlayout"
     android:id="@+id/rvCategory"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
 
 
-</androidx.drawerlayout.widget.DrawerLayout>
+</RelativeLayout>
