--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,18 +5,19 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.ScheduleFragment">
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/scheduleTabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            app:tabMode="auto"
-            tools:ignore="SpeakableTextPresentCheck" />
+        android:layout_height="wrap_content"
+        android:background="#fff">
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/scheduleTabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:tabGravity="fill"
+                app:tabMode="auto"
+                tools:ignore="SpeakableTextPresentCheck"/>
     </com.google.android.material.appbar.AppBarLayout>
 
 
