--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".Fragment.CategoryFragment">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Fragment.CategoryFragment">
+
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbarlayout"
+        android:id="@+id/appbarCategory"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#fff">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/CategoryToolbar"
-            android:minHeight="55dp"
-            android:background="@color/white"
-            android:theme="?attr/actionBarTheme"
-            >
+            android:id="@+id/categoryToolbar"
+            android:minHeight="48dp"
+            android:theme="?attr/actionBarTheme">
+
             <com.google.android.material.tabs.TabLayout
-                android:id="@+id/TablayoutCategory"
-                app:tabSelectedTextColor="@android:color/holo_orange_light"
+                android:id="@+id/tablayoutCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:tabSelectedTextColor="@color/primary"
+                app:itemIconTint="@color/custom_color_bottom_nav"
+                app:itemTextColor="@color/custom_color_bottom_nav"
+                app:tabIndicatorColor="@color/primary"
+                android:minHeight="48dp"
                 app:tabGravity="fill"
-                app:tabMode="auto">
-                />
+                app:tabMode="scrollable"
+                tools:ignore="SpeakableTextPresentCheck"/>
 
-            </com.google.android.material.tabs.TabLayout>
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/CategoryViewPagerCa"
+        android:id="@+id/categoryViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/appbarlayout"
+        android:layout_below="@+id/appbarCategory"
         tools:ignore="SpeakableTextPresentCheck" />
-
-
-
 
 </RelativeLayout>
