--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,17 +15,37 @@
         android:text="Home Fragment"
         android:textSize="30sp" />
 
-    <ImageButton
-        android:id="@+id/ibAdd"
+    <com.github.clans.fab.FloatingActionMenu
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:menu_labels_position="right"
+        app:menu_labels_showAnimation="@anim/fab_slide_in_from_left"
+        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_left"
+        app:menu_labels_textSize="14sp"
+        app:menu_labels_cornerRadius="3dp"
+        app:menu_colorNormal="@color/primary"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@null"
-        android:src="@drawable/add_test_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        >
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/ibAdd"
+            app:fab_label="Thêm nhắc nhở"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/white"
+            android:src="@drawable/ic_baseline_search_24"/>
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/ibGhichu"
+            app:fab_label="Thêm hoạt động lịch trình"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/white"
+            android:src="@drawable/ic_baseline_event_note_24"/>
+
+    </com.github.clans.fab.FloatingActionMenu>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
