--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#1980E0</color>
     <color name="text_dark">#333333</color>
+    <color name="red">#DC665D</color>
+    <color name="blue">#5992E6</color>
+
 </resources>
