Xóa file không liên quan

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="primary">#1980E0</color>
     <color name="text_dark">#333333</color>
     <color name="red">#DC665D</color>
-    <color name="blue">#0000FF</color>
+    <color name="blue">#3333E6</color>
     <color name="lightGray">#EEE</color>
     <color name="gray">#888</color>
 </resources>
