Thêm icon + vào fragment_schedule_daily và fragment_schedule_month layout

--- a/app/src/main/res/layout/fragment_daily_schedule.xml
+++ b/app/src/main/res/layout/fragment_daily_schedule.xml
@@ -1,88 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.DailyScheduleFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Hôm nay"
-        android:textColor="@color/blue"
-        android:backgroundTint="@color/white"
-        android:textStyle="bold"
-        android:textSize="20sp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnDailyBack"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/back"
-            android:textColor="@color/blue"
-            android:backgroundTint="@color/white"
-            android:textStyle="bold"
-            android:textSize="20sp"/>
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
+
+            <Button
+                android:id="@+id/btnDailyBack"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/back"
+                android:textColor="@color/blue"
+                android:backgroundTint="@color/white"
+                android:textStyle="bold"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/monthDayText"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:text="December 23"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:textColor="@color/text_dark"/>
+
+            <Button
+                android:id="@+id/btnDailyNext"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/forward"
+                android:textColor="@color/blue"
+                android:backgroundTint="@color/white"
+                android:textStyle="bold"
+                android:textSize="20sp"/>
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/monthDayText"
-            android:layout_width="0dp"
-            android:layout_weight="2"
+            android:id="@+id/dayOfWeekTV"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="December 23"
-            android:textSize="20sp"
+            android:text="Monday"
+            android:layout_marginBottom="20dp"
+            android:textColor="@color/text_dark"
             android:textAlignment="center"
-            android:textColor="@color/text_dark"/>
+            android:textSize="18sp"/>
 
-        <Button
-            android:id="@+id/btnDailyNext"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/forward"
-            android:textColor="@color/blue"
-            android:backgroundTint="@color/white"
-            android:textStyle="bold"
-            android:textSize="20sp"/>
+        <ListView
+            android:id="@+id/hourListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/dayOfWeekTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Monday"
-        android:layout_marginBottom="20dp"
-        android:textColor="@color/text_dark"
-        android:textAlignment="center"
-        android:textSize="18sp"/>
-
-    <Button
-        android:id="@+id/btnAddNewDailyEvent"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnMoveToAddScheduleActivityDaily"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Event"
-        android:textColor="@color/blue"
-        android:backgroundTint="@color/white"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:textSize="20sp"/>
+        android:layout_margin="16dp"
+        app:fabSize="normal"
+        app:srcCompat="@drawable/add_white_icon"
+        app:backgroundTint="@color/primary"
+        app:tint="@color/white"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|right"/>
 
-    <ListView
-        android:id="@+id/hourListView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"/>
-
-</LinearLayout>
+</RelativeLayout>
