--- a/app/src/main/res/layout/activity_add_reminder.xml
+++ b/app/src/main/res/layout/activity_add_reminder.xml
@@ -68,15 +68,14 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:gravity="center_vertical"
-        android:paddingHorizontal="12dp"
         android:background="@drawable/bottom_line">
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginRight="12dp"
-            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+            android:layout_marginHorizontal="12dp"
+            app:srcCompat="@drawable/alarm_black_24dp" />
 
         <EditText
             android:id="@+id/etRemind"
@@ -86,6 +85,7 @@
             android:textSize="18sp"
             android:inputType="textPersonName"
             android:text=""
+            android:layout_span="3"
             android:textColor="@color/text_dark"
             android:hint="Nhắc nhở về"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
@@ -94,7 +94,6 @@
     <TableRow
         android:id="@+id/rowTime"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="12dp"
         android:layout_width="match_parent"
         android:gravity="center_vertical"
         android:background="@drawable/bottom_line">
@@ -103,8 +102,8 @@
             android:id="@+id/ivIcon2"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginRight="12dp"
-            app:srcCompat="@android:drawable/ic_lock_idle_alarm"/>
+            android:layout_marginHorizontal="12dp"
+            app:srcCompat="@drawable/schedule_black_24dp"/>
 
         <TextView
             android:id="@+id/tvTime"
@@ -113,6 +112,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="10sp"
             android:text=""
+            android:layout_span="3"
             android:background="?android:attr/selectableItemBackground"
             android:textColor="@color/text_dark"
             android:textSize="18sp" />
@@ -121,22 +121,22 @@
     <TableRow
         android:id="@+id/rowDate"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="12dp"
         android:layout_width="match_parent"
         android:gravity="center_vertical"
         android:background="@drawable/bottom_line">
 
         <ImageView
-            android:id="@+id/ivIcon3"
+            android:id="@+id/ivIcon4"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginRight="12dp"
-            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+            android:layout_marginHorizontal="12dp"
+            app:srcCompat="@drawable/calendar_today_black_24dp" />
 
         <TextView
             android:id="@+id/tvDate"
             android:layout_width="match_parent"
             android:text=""
+            android:layout_span="3"
             android:gravity="center_vertical"
             android:paddingLeft="10sp"
             android:textSize="18sp"
@@ -145,5 +145,75 @@
             android:layout_height="60dp" />
     </TableRow>
 
-    
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/bottom_line">
+        <Spinner
+            android:id="@+id/spinnerTypereminder"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_span="3"
+            android:dropDownWidth="wrap_content"
+            android:spinnerMode="dropdown"
+            android:paddingEnd="0dp"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/bottom_line">
+        <Spinner
+            android:id="@+id/spinnerDurationReminder"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_span="3"
+            android:dropDownWidth="wrap_content"
+            android:spinnerMode="dropdown"
+            android:paddingEnd="0dp"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/bottom_line">
+        <Spinner
+            android:id="@+id/spinnerLoopReminder"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_span="3"
+            android:dropDownWidth="wrap_content"
+            android:spinnerMode="dropdown"
+            android:paddingEnd="0dp"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/bottom_line">
+        <ImageView
+            android:id="@+id/ivIcon3"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginHorizontal="12dp"
+            app:srcCompat="@drawable/calculate_black_24dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="60sp"
+            android:gravity="center_vertical"
+            android:textSize="18sp"
+            android:textColor="@color/text_dark"
+            android:text="Sử dụng capcha"/>
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"/>
+    </TableRow>
 </TableLayout>
